@@ -7,6 +7,7 @@
 #cmakedefine OBD_DEFAULT_SERIALPORT "@OBD_DEFAULT_SERIALPORT@"
 #cmakedefine OBD_DEFAULT_DATABASE "@OBD_DEFAULT_DATABASE@"
 #cmakedefine OBD_CONFIG_FILENAME "@OBD_CONFIG_FILENAME@"
+#cmakedefine OBD_DEFAULT_COLUMNS "@OBD_DEFAULT_COLUMNS@"
 
 #endif // OBDCONFIG_H
 
