@@ -6,6 +6,8 @@ Version 0.9
  obd2csv: Take --start and --end time parameters
  obd2csv: add option to gzip csv file
  obdsim: dbus plugin work with more types on the bus
+ config: Start of work on making columns run-time configurable
+ obd2kml: Add date to start & end beacons
 
 Version 0.8 (released 2009-09-04)
  Put Copyright/GPL notices in all files
